<?xml version="1.0"?>
<package format="2">
  <name>l2l_calib</name>
  <version>0.0.0</version>
  <description>The l2l_calib package</description>
  <maintainer email="edward@todo.todo">edward</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

</package>
